# olivia-modem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  presets.yaml  pyproject.toml
src/olivia_modem/: __init__.py  base_settings.py  fec_codec.py  functions.py  mode_parameters.py  receiver.py  shared_types.py  symbol_converter.py  tone_generator.py  transmitter.py
src/omodem/: functions.py  main.py
tests/: fixtures.py  test_fec_codec.py  test_functions.py  test_symbol_converter.py  test_tone_generator.py
